# video-annotator

./: .gitignore  .prettierignore  babel.config.js  concat.sh  dewobble_test.sh  package.json  tsconfig.json
opencv/: AvFrameSource.hpp  AvFrameSourceFileVaapi.cpp  AvFrameSourceFileVaapi.hpp  AvFrameSourceMapOpenCl.cpp  AvFrameSourceMapOpenCl.hpp  AvFrameSourceOpenCl.cpp  AvFrameSourceOpenCl.hpp  AvFrameSourceProfile.cpp  AvFrameSourceProfile.hpp  CMakeLists.txt  CalibrateCamera.cpp  DisplayImage.cpp  FrameSource.hpp  FrameSourceFfmpegOpenCl.cpp  FrameSourceFfmpegOpenCl.hpp  FrameSourceProfile.cpp  FrameSourceProfile.hpp  FrameSourceWarp.cpp  FrameSourceWarp.hpp  OpenClTest.cpp  Profiler.cpp  Profiler.hpp  Warper.cpp  Warper.hpp  createMap.cl  gpmf.cpp  hw_init.cpp  hw_init.hpp  meson.build  out_camera_data.xml  out_camera_data.yml  rotation.cpp  rotation.hpp  timing.cpp  utils.cpp  utils.hpp
opencv/camera_calibration/: camera_calibration.cpp  in_VID5.xml
src/: cli.js  cli.ts  connectFilters.ts  join.js  join.ts  pixelFormatConversion.ts  pixelFormats.ts  render.js  render.ts  utils.js  utils.ts
