cmake_minimum_required(VERSION 2.8)
project( DisplayImage )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( DisplayImage DisplayImage.cpp )
target_link_libraries( DisplayImage ${OpenCV_LIBS} va-drm )
add_executable( OpenClTest OpenClTest.cpp )
target_link_libraries( OpenClTest ${OpenCV_LIBS} )
set(CMAKE_BUILD_TYPE, "Debug")
